wrote a bit more

--- a/TP3/dissertation/Evaluation/client.tex
+++ b/TP3/dissertation/Evaluation/client.tex
@@ -7,3 +7,5 @@ Additionally, it was important to test that incoming commands were parsed and ha
 
 Other features were tested in a less structured manner, and were aided by volunteering Computing Science students who were eager to try and break the client. One such occasion where a user was able to produce undesired behaviour was when they discovered it was possible to inject html into messages, which would then be sent and displayed in the chat window. This allowed users to set their nicknames as html tables, and resize their fonts to huge sizes, for example. This was possible because we implemented the ability to use smileys by using a Swing component that supports html as the message display box. We resolved this issue by replacing HTML brackets with their `special entity' characters.\footnote{\texttt{http://htmlhelp.com/reference/html40/entities/special.html}}
 
+As with many programs, we are aware through less formal testing that there are still some bugs in our client. In particular, the status of users entering the group chat rarely defaults to being offline, until the user changes their status. However, due to time contraints we have not spent time chasing down these bugs as we have focused time on testing more fundamental aspects to our system, such as those outlined above. 
+
