--- a/TP3/dissertation/Evaluation/client.tex
+++ b/TP3/dissertation/Evaluation/client.tex
@@ -5,7 +5,7 @@ The key aspect of an instant messaging client is ensuring messages get delivered
 %TODO: check if this makes more sense now
 Additionally, it was important to test that incoming commands were parsed and handed to the corresponding method by the networking component. To test this, first we printed commands as they were parsed as they came from the socket in the GIM protocol syntax. The parsing code then passes the Command object to be another method which works out the method corresponding to the command, by extracting the command, and arguments. The data segment of the command is passed as some structure (usually of a list.) Our second step was to print out the method that was called, and the parameters that it received. This allowed us to match it the arguments received to the data segment to the original print statement with the protocol in its raw form. If the correct method was called corresponding to an incoming command, and the correct arguments given to the function, then the command had been parsed correctly. This method was used for each incoming command. We also checked that all outgoing messages to the server were attempted to be sent. These two straightforward methods were all that was required to conclude that the networking component was working properly in full.
 
-Other features were tested in a less structured manner, and were aided by volunteering Computing Science students who were eager to try and break the client. One such occasion where a user was able to produce undesired behaviour was when they discovered it was possible to inject html into messages, which would then be sent and displayed in the chat window. This allowed users to set their nicknames as html tables, and resize their fonts to huge sizes, for example. This was possible because we implemented the ability to use smileys by using a Swing component that supports html as the message display box. We resolved this issue by replacing HTML brackets with their `special entity' characters.\footnote{\texttt{http://htmlhelp.com/reference/html40/entities/special.html}}
+Other features were tested in a less structured manner, and were aided by volunteering Computing Science students who were eager to try and break the client. One such occasion where a user was able to produce undesired behaviour was when they discovered it was possible to inject HTML into messages, which would then be sent and displayed in the chat window. This allowed users to set their nicknames as HTML tables, and resize their fonts to huge sizes, for example. This was possible because we implemented the ability to use smileys by using a Swing component that supports html as the message display box. We resolved this issue by replacing HTML brackets with their `special entity' characters.\footnote{\texttt{http://htmlhelp.com/reference/html40/entities/special.html}}
 
 As with many programs, we are aware through less formal testing that there are still some bugs in our client. In particular, the status of users entering the group chat rarely defaults to being offline, until the user changes their status. However, due to time contraints we have not spent time chasing down these bugs as we have focused time on testing more fundamental aspects to our system, such as those outlined above. 
 
