--- a/TP3/dissertation/Evaluation/conclusion.tex
+++ b/TP3/dissertation/Evaluation/conclusion.tex
@@ -1,3 +1,3 @@
 \section{Summary}
 
-
+Some formal testing allowed us to be fairly confident that the core functionality of our system is working. However, much of our testing was unstructured, and we regret not developing a method to test that functions were still working between version to version of our system, to identify if we were introducing defects. It would've been useful to have a Java class to simulate activity that could achieve such an aim. Despite this, we have suceeded in developing a robust and reliable application.  
