Wrote GUI implementation section.

--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -125,4 +125,4 @@ The above wireframe is the main window the user will see after they have logged 
 
 This wireframe represents the window which is created when a chat is initiated, either by themselves or another user. The chat box has a similar layout to the main window, to aid consistency. The user details are at the top, the main body of content is in the middle, and the user operations are at the bottom.
 
-These wireframes served as the basis for the Swing implementation. While the features of the final interface are unchanged from the wireframes, some slight alterations were made to the layout. These modifications were typically the result of the practicalities of using Swing and the natural evolution during implementation. Examples of these alterations are the removal of buttons for emoticons, file transferring, and group chat, and a different position for the status icons in the main window.
+These wireframes served as the basis for the Swing implementation. While the features of the final interface are unchanged from the wireframes, some slight alterations were made to the layout. These modifications were typically the result of the practicalities of using Swing and natural evolution during implementation. Examples of these alterations are the removal of buttons for emoticons, file transferring, and group chat, and a different position for the status icons in the main window. These changes are discussed in more detail in section \ref{guiimpl}.
