--- a/TP3/dissertation/Implementation/gui.tex
+++ b/TP3/dissertation/Implementation/gui.tex
@@ -25,5 +25,5 @@ There were also changes to the chat window (see figure \ref{ChatWindowDia}). We 
     \end{center}
 \end{figure}
 
-The menus at the top of the windows ended up being changed. The main window's menus stayed the same (File, Options, and Help), except that when you click on the Options menu, a list of checkboxes appears instead of the more complex panel we had planned. For a while we had the exact same menus for both the main window and chat windows, but then we decided it would be confusing to have more than one place to change the same options (more details about how menus have changed are in section \ref{designimpl}). Now, the chat window has a Conversation menu and an Options menu. The Options menus in the chat window and main window are different, offering options that correspond to the window it's in. To explain, the main window's changeable options are ``Show Offline Users'' and ``Show Notifications,'' while the chat window's options are ``Enable Logging'' and ``Show Timestamps.'' The Conversation menu has items like ``View Log,'' ``Clear Window,'' and ``Block.''
+The menus at the top of the windows ended up being changed. The main window's menus stayed the same (File, Options, and Help), except that when you click on the Options menu, a list of checkboxes appears instead of the more complex panel we had planned. For a while we had the exact same menus for both the main window and chat windows, but then we decided it would be confusing to have more than one place to change the same options (more details about how menus have changed are in section \ref{code_evol}). Now, the chat window has a Conversation menu and an Options menu. The Options menus in the chat window and main window are different, offering options that correspond to the window it's in. To explain, the main window's changeable options are ``Show Offline Users'' and ``Show Notifications,'' while the chat window's options are ``Enable Logging'' and ``Show Timestamps.'' The Conversation menu has items like ``View Log,'' ``Clear Window,'' and ``Block.''
 
