--- a/TP3/dissertation/appendix/appendix.tex
+++ b/TP3/dissertation/appendix/appendix.tex
@@ -1,10 +1,6 @@
 \appendix
-\chapter{Appendices}
-
-\label{protocol_spec}
-
+\chapter{GIM Protocol Specification}
 \input{appendix/protocolapp.tex}
 
-\label{use_cases}
-
+\chapter{Use Cases}
 \input{appendix/cases.tex}
