--- a/TP3/dissertation/appendix/cases.tex
+++ b/TP3/dissertation/appendix/cases.tex
@@ -1,3 +1,4 @@
+\label{use_cases}
 \section{Introduction}
 
 This appendix contains all of the use cases that were documented during the design process. In many cases, the specifics of how these actions occur in GIM are different than the outlines here. The higher priority use cases were documented while those less likely to be implemented were not.
