--- a/TP3/dissertation/appendix/protocolapp.tex
+++ b/TP3/dissertation/appendix/protocolapp.tex
@@ -1,3 +1,4 @@
+\label{protocol_spec}
 \section{Introduction}
 
 A network protocol is a set of rules which must be followed for a program to produce the desired effect on another machine in a network based system. The motivation behind creating a protocol is to allow a standard pattern of communication to be devised for a given system. This allows a system following the protocol to consistently perform the same role, in any context, regardless of its implementation. Any command in our protocol should produce a verifiable result as outlined in this section.
